Update checkboxes: remove numbers, fix padding, add row highlight. This may be too much.

--- a/themes/bootprint3/less/bootprint.less
+++ b/themes/bootprint3/less/bootprint.less
@@ -142,37 +142,6 @@ ul.random.image li img { margin: 0 auto; }
 }
 .tagList button .fa-close { margin-top: 3px; }
 
-/* --- Search --- */
-.bulkActionButtons { padding: 1rem; }
-.top-facets .facet a { vertical-align: middle; }
-.result {
-  padding: 1rem;
-  &:nth-child(even) { background-color: @gray-lighter; }
-  &.embedded .getFull.expanded {
-    margin-top: -6px;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-  }
-}
-.result > p {padding:0 1em;}
-.result .label {
-  display: inline-block;
-  margin-bottom: 4px;
-}
-.result .long-view .tab-content {background: #fff;}
-.result .media { margin: 0; }
-.result .row { padding: 0; }
-.result .savedLists {
-  margin: 0 0 4px;
-  padding: 4px 0 4px 6px;
-}
-.result .savedLists ul { padding-left: 18px; }
-.search-controls label {
-  margin: 0;
-  vertical-align: middle;
-}
-.search-stats { color: @gray; }
-
 /* --- Sidebar --- */
 .sidebar {
   .list-group { margin-bottom: 5px; }
